--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -19,3 +19,11 @@ spec:
         image: paripuranam/streamgen-ai:b4408fe
         ports:
         - containerPort: 80
+        resources:
+          limits:
+            memory: "512Mi"
+            cpu: "0.5"
+          requests:
+            memory: "256Mi"
+            cpu: "0.25"
+          
