feat: add the terraform and tfsec in workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -261,6 +261,8 @@ jobs:
         uses: aquasecurity/tfsec-action@master
         with:
           working_directory: terraform
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
 
 
   # Update Kubernetes Deployment
