--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -242,7 +242,6 @@ jobs:
   terraform-scan:
     name: Terraform Security Scan
     runs-on: ubuntu-latest
-    # needs: deploy
 
     steps:
       - name: Checkout code
@@ -254,15 +253,18 @@ jobs:
           terraform_version: 1.5.0
 
       - name: Terraform Init
-        working-directory: terraform
-        run: terraform init
+        run: terraform -chdir=terraform init
 
-      - name: Run tfsec scan
-        uses: aquasecurity/tfsec-action@master
+      - name: Run tfsec scan (non-blocking, concise)
+        uses: aquasecurity/tfsec-action@v1.0.3
+        continue-on-error: true
         with:
           working_directory: terraform
+          additional_args: >
+            --no-colour
+            --concise-output
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
   # Update Kubernetes Deployment
